# source-code-diagnosis

./: .gitattributes  .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  biome.json  bootstrap.sh  browser_compat_data.json  browser_compat_names.json  browser_compat_names_1.json  classes.json  get_browser_compat_data.mjs  grammar.json  h.mjs  index.d.ts  index.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  response.json  rust-toolchain.toml  rustfmt.toml  statements.json  vite.config.ts
.cargo/: config.toml
crates/beans/: Cargo.toml
crates/beans/src/: ast_node.rs  lib.rs  location.rs  position.rs  span.rs
crates/binding/: Cargo.toml  index.js  package.json
crates/binding/npm/darwin-arm64/: README.md  package.json
crates/binding/npm/darwin-x64/: package.json
crates/binding/npm/linux-arm64-gnu/: README.md  package.json
crates/binding/npm/linux-arm64-musl/: README.md  package.json
crates/binding/npm/linux-x64-gnu/: package.json
crates/binding/npm/linux-x64-musl/: README.md  package.json
crates/binding/npm/win32-arm64-msvc/: package.json
crates/binding/npm/win32-x64-msvc/: package.json
crates/binding/src/: lib.rs
crates/check_browser_supported/: Cargo.toml
crates/check_browser_supported/src/: browser_versions.rs  compat.rs  compat_checker.rs  lib.rs  macros.rs  target.rs
crates/check_browser_supported/src/classes/: classes.rs  constructor.rs  extends.rs  mod.rs  private_class_fields.rs  private_class_fields_in.rs  private_class_methods.rs  public_class_fields.rs  static.rs  static_class_fields.rs  static_initialization_blocks.rs
crates/check_browser_supported/src/functions/: arguments.rs  arguments_callee.rs  arrow_functions.rs  arrow_functions_trailing_comma.rs  default_parameters.rs  default_parameters_destructured_parameter_with_default_value_assignment.rs  default_parameters_parameters_without_defaults_after_default_parameters.rs  functions.rs  get.rs  get_computed_property_names.rs  iterator.rs  length.rs  method_definitions.rs  method_definitions_async_generator_methods.rs  method_definitions_async_methods.rs  method_definitions_generator_methods_not_constructable.rs  mod.rs  rest_parameters.rs  rest_parameters_destructuring.rs  set.rs  set_computed_property_names.rs
crates/check_browser_supported/src/functions_back/: block_level_functions.rs  mod.rs
crates/check_browser_supported/src/grammar/: array_literals.rs  binary_numeric_literals.rs  boolean_literals.rs  decimal_numeric_literals.rs  hashbang_comments.rs  hexadecimal_escape_sequences.rs  hexadecimal_numeric_literals.rs  mod.rs  null_literal.rs  numeric_separators.rs  octal_numeric_literals.rs  regular_expression_literals.rs  shorthand_object_literals.rs  string_literals.rs  template_literals.rs  template_literals_template_literal_revision.rs  trailing_commas.rs  trailing_commas_trailing_commas_in_dynamic_import.rs  trailing_commas_trailing_commas_in_functions.rs  trailing_commas_trailing_commas_in_object_literals.rs  unicode_escape_sequences.rs  unicode_point_escapes.rs
crates/check_browser_supported/src/operators/: addition.rs  addition_assignment.rs  assignment.rs  async_function.rs  async_generator_function.rs  await.rs  bitwise_and.rs  bitwise_and_assignment.rs  bitwise_not.rs  bitwise_or.rs  bitwise_or_assignment.rs  bitwise_xor.rs  bitwise_xor_assignment.rs  class.rs  comma.rs  conditional.rs  decrement.rs  delete.rs  destructuring.rs  destructuring_computed_property_names.rs  destructuring_rest_in_arrays.rs  destructuring_rest_in_objects.rs  division.rs  division_assignment.rs  equality.rs  exponentiation.rs  exponentiation_assignment.rs  function.rs  function_trailing_comma.rs  generator_function.rs  generator_function_trailing_comma.rs  greater_than.rs  greater_than_or_equal.rs  grouping.rs  import.rs  import_meta.rs  import_meta_resolve.rs  import_options_parameter.rs  in.rs  increment.rs  (+47 more)
crates/check_browser_supported/src/operators_back/: await_top_level.rs
crates/check_browser_supported/src/statements/: async_function.rs  async_generator_function.rs  block.rs  break.rs  class.rs  const.rs  continue.rs  debugger.rs  do_while.rs  empty.rs  export.rs  export_default.rs  export_namespace.rs  for.rs  for_await_of.rs  for_in.rs  for_of.rs  for_of_async_iterators.rs  for_of_closing_iterators.rs  function.rs  function_trailing_comma_in_parameters.rs  generator_function.rs  generator_function_iterator_result_object.rs  generator_function_not_constructable_with_new.rs  generator_function_trailing_comma_in_parameters.rs  if_else.rs  import.rs  import_import_assertions.rs  import_import_assertions_type_css.rs  import_import_assertions_type_json.rs  import_import_attributes.rs  import_import_attributes_type_css.rs  import_import_attributes_type_json.rs  label.rs  let.rs  return.rs  switch.rs  throw.rs  try_catch.rs  try_catch_optional_catch_binding.rs  (+3 more)
crates/check_browser_supported/src/tmp/: tmp.rs
crates/check_browser_supported/tests/: check_browser_supported_with_source_code_test.rs
crates/check_danger_jsx_props/: Cargo.toml
crates/check_danger_jsx_props/src/: lib.rs  main.rs
crates/check_danger_jsx_props/tests/: lib_test.rs
crates/check_danger_string/: Cargo.toml
crates/check_danger_string/src/: lib.rs
crates/check_danger_string/tests/: lib_test.rs
crates/check_filename_case/: Cargo.toml
crates/check_filename_case/src/: lib.rs
crates/check_filename_case/tests/: lib.rs
crates/check_oxlint/: Cargo.toml
crates/check_oxlint/src/: lib.rs
crates/check_oxlint/tests/: oxlint_test.rs
crates/module_graph/: Cargo.toml
crates/module_graph/src/: cycle.rs  edges.rs  graph.rs  lib.rs  macros.rs  model.rs  phantom_dependencies.rs
crates/module_graph/tests/: cycle.rs  get_graph_test.rs  phantom_dependencies_test.rs
crates/module_member_usage/: Cargo.toml
crates/module_member_usage/src/: const.rs  handler.rs  import_declaration_specifier_expand.rs  lib.rs  member_expression.rs  process.rs  response.rs
crates/utils/: Cargo.toml
crates/utils/src/: glob.rs  lib.rs  main.rs  semantic_builder.rs
scripts/: a.mjs  (+11 more)
(+1059 files in other folders)
