[workspace]
members  = ["crates/*"]
resolver = "2"
 

[workspace.dependencies]
napi-derive = "2.16.13"
napi = { version = "2.16.13", default-features = false, features = ["napi4"] }
serde ={ version = "1.0.121", features = ["derive"] }

# oxc_allocator = {version = "0.39.0"}
# oxc_parser = {version = "0.39.0"}
# oxc_span = {version = "0.39.0"}
# oxc_ast = {version = "0.39.0"}
# oxc_syntax = {version = "0.39.0"}
# oxc_semantic = {version = "0.39.0"}

oxc_diagnostics = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.0", package = "oxc_diagnostics" }
oxc_allocator = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.0", package = "oxc_allocator" }
oxc_parser = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.0", package = "oxc_parser" }
oxc_span = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.0", package = "oxc_span" }
oxc_ast = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.0", package = "oxc_ast" }
oxc_syntax = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.0", package = "oxc_syntax" }
oxc_semantic = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.0", package = "oxc_semantic" }

oxc_linter = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.0", package = "oxc_linter" }


oxc-browserslist = "1.0.3"
oxc_resolver = "2.1.1"

tokei = "12.1.2"
tokio = "1.42.0"

log = "0.4.22"
env_logger = "0.11.5"
anyhow = "1.0.80"
parking_lot = "0.12.3"
serde_json = "1.0.128"
itertools = "0.12.0"
wax = "0.6.0"
camino = "1.1.9"
rayon = "1.10.0"
insta = "1.36.1"
pathdiff = "0.2"
tap = "1.0.1"