[workspace]
members = ["crates/*"]
resolver = "2"


[workspace.dependencies]
napi = { version = "3.3.0", default-features = false, features = ["napi4"] }
napi-build = { version = "2.2.3" }
napi-derive = { version = "3.2.5" }


serde = { version = "1.0.121", features = ["derive"] }


oxc = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.3", package = "oxc", features = [
  "semantic",
] }
oxc_linter = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v0.15.3", package = "oxc_linter" }


oxc-browserslist = { version = "1.1.1" }
oxc_resolver = { version = "2.1.1" }

ropey = { version = "1.0.0" }
tokei = { version = "12.1.2" }
tokio = { version = "1.42.0" }

anyhow = { version = "1.0.80" }
camino = { version = "1.1.9" }
env_logger = { version = "0.11.5" }
insta = { version = "1.36.1" }
itertools = { version = "0.12.0" }
log = { version = "0.4.22" }
parking_lot = { version = "0.12.3" }
pathdiff = { version = "0.2" }
rayon = { version = "1.10.0" }
serde_json = { version = "1.0.128" }
tap = { version = "1.0.1" }
wax = { version = "0.6.0" }
