[package]
name = "beans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi-derive = { workspace = true }
napi = { workspace = true }
serde = { workspace = true }
ropey = "1.0.0"
oxc_span = { workspace = true }
oxc_semantic = { workspace = true }
