[package]
name = "beans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi-derive = { workspace = true }
napi = { workspace = true }
serde = { workspace = true }
ropey = {workspace = true}
oxc = { workspace = true }


