[package]
edition = "2021"
name    = "beans"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi        = { workspace = true }
napi-derive = { workspace = true }
oxc         = { workspace = true }
ropey       = { workspace = true }
serde       = { workspace = true }
