[package]
name = "binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {workspace = true}
napi-derive = {workspace = true}
check_danger_string = { path = "../check_danger_string" }
check_browser_supported = { path = "../check_browser_supported" }
check_syntax = { path = "../check_syntax" }
module_member_usage = { path = "../module_member_usage" }
check_filename_case = { path = "../check_filename_case" }
check_danger_jsx_props = { path = "../check_danger_jsx_props" }
utils = { path = "../utils" }
beans = { path = "../beans" }
module_graph = { path = "../module_graph" }
log = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"

[features]
used_linker = []
noop = []
