[package]
name = "check_danger_jsx_props"
version = "0.1.0"
edition = "2024"

[dependencies]
napi-derive = { workspace = true }
napi = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
wax = { workspace = true }
rayon = { workspace = true }
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
pathdiff = { workspace = true }
oxc_semantic = {workspace = true}
oxc_ast = { workspace = true }
beans = { path = "../beans" }
ropey = "1.0.0"
insta = "1.36.1"
serde = { workspace = true }
serde_json = { workspace = true }
