[package]
edition = "2024"
name    = "check_danger_jsx_props"
version = "0.1.0"

[dependencies]
anyhow      = { workspace = true }
beans       = { path = "../beans" }
camino      = { workspace = true }
insta       = "1.36.1"
napi        = { workspace = true }
napi-derive = { workspace = true }
pathdiff    = { workspace = true }
rayon       = { workspace = true }
ropey       = "1.0.0"
serde       = { workspace = true }
serde_json  = { workspace = true }
utils       = { path = "../utils" }
wax         = { workspace = true }

oxc        = { workspace = true }
oxc_linter = { workspace = true }
