[package]
name = "check_danger_string"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi-derive = { workspace = true }
napi = { workspace = true }
serde = { workspace = true }
oxc_ast = { workspace = true }
utils = { path = "../utils" }
beans = { path = "../beans" }
anyhow = { workspace = true }
parking_lot = { workspace = true }
oxc_span = {workspace = true}