[package]
edition = "2021"
name    = "check_danger_string"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = { workspace = true }
beans       = { path = "../beans" }
camino      = { workspace = true }
insta       = { workspace = true }
napi        = { workspace = true }
napi-derive = { workspace = true }
parking_lot = { workspace = true }
pathdiff    = { workspace = true }
rayon       = { workspace = true }
serde       = { workspace = true }
utils       = { path = "../utils" }
wax         = { workspace = true }

oxc = { workspace = true }
