[package]
name = "check_filename_case"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
anyhow = { workspace = true }
wax = { workspace = true }
napi-derive = { workspace = true }
napi = { workspace = true }
camino = { workspace = true }
rayon = { workspace = true }
insta = { workspace = true }
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
pathdiff = { workspace = true }