[package]
edition = "2021"
name    = "check_filename_case"
version = "0.1.0"

[dependencies]
anyhow      = { workspace = true }
camino      = { workspace = true }
insta       = { workspace = true }
napi        = { workspace = true }
napi-derive = { workspace = true }
pathdiff    = { workspace = true }
rayon       = { workspace = true }
utils       = { path = "../utils" }
wax         = { workspace = true }

# oxc_allocator = { workspace = true }
# oxc_parser = { workspace = true }
# oxc_span = { workspace = true }
# oxc = { workspace = true }
