[package]
name = "check_oxlint"
version = "0.1.0"
edition = "2024"
 

[dependencies]
anyhow = { workspace = true }
napi-derive = { workspace = true }
napi = { workspace = true }
utils = { path = "../utils" }
beans = { path = "../beans" }
insta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pathdiff = { workspace = true }

oxc_linter = { workspace = true }
oxc = { workspace = true }
