[package]
edition = "2024"
name    = "check_oxlint"
version = "0.1.0"


[dependencies]
anyhow      = { workspace = true }
beans       = { path = "../beans" }
insta       = { workspace = true }
napi        = { workspace = true }
napi-derive = { workspace = true }
pathdiff    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
utils       = { path = "../utils" }

oxc        = { workspace = true }
oxc_linter = { workspace = true }
