[package]
name = "module_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
beans = { path = "../beans" }
petgraph = "0.6.5"
bimap = "0.6.2"
camino = { workspace = true }
wax = "0.6.0"
rayon = { workspace = true }
crossbeam = "0.8.4"
napi-derive = { workspace = true }
napi = { workspace = true }
oxc_ast = { workspace = true }
oxc_resolver = { workspace = true }
oxc_parser = { workspace = true }
oxc_allocator = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
oxc_span = { workspace = true }
pathdiff = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread","test-util","macros"] }
pprof = { version = "0.12", features = ["flamegraph"] }
parking_lot = "0.12.1"
insta = { workspace = true }